--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "storybook-build": "build-storybook"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@editorjs/code": "^2.8.0",
     "@editorjs/editorjs": "^2.26.5",
     "@editorjs/header": "^2.7.0",
@@ -19,20 +22,35 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.32",
     "@types/react-dom": "18.0.11",
+    "apollo-boost": "^0.4.9",
+    "chart.js": "^4.2.1",
+    "d3": "^7.8.4",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "faker": "^5.5.3",
+    "graphql": "^15.8.0",
     "headlessui": "^0.0.0",
+    "html-loader": "^4.2.0",
+    "mongodb": "^5.2.0",
     "next": "13.2.4",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-editor-js": "^2.1.0",
     "react-icons": "^4.8.0",
-    "react-quill": "^2.0.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@storybook/react": "^7.0.2",
+    "@types/faker": "5.5.9",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "tailwindcss": "^3.3.1",
+    "vue-loader": "^17.0.1",
+    "vue-template-compiler": "^2.7.14"
   }
 }
